# django_book

./: pyproject.toml
mysite/blog/migrations/: 0001_initial.py
mysite/mysite/: settings.py
